--- a/Internhub/wwwroot/css/main.css
+++ b/Internhub/wwwroot/css/main.css
@@ -19,17 +19,28 @@ header{
   padding: 1em 5em;
   justify-content: space-between;
 }
-.name{
-  font-family: Sans-Serif, Helvetia, Arial;
-  font-size: 1.5em;
-  text-align: center;
+.name {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family: Sans-Serif, Helvetia, Arial;
+    font-size: 1.5em;
+    text-align: center;
 }
-nav{
-  font-family: Sans-Serif, Helvetia, Arial;
-  font-size: 1em;
-  text-align: center;
-  justify-content: center;
-}
+    .name ul li{
+        list-style:none
+    }
+        .name ul li a{
+            text-decoration: none;
+            padding: 0px 20px;
+            font-size: 20px;
+        }
+        nav {
+            font-family: Sans-Serif, Helvetia, Arial;
+            font-size: 1em;
+            text-align: center;
+            justify-content: center;
+        }
 .company{
   color: #007FFF;
   font-weight: bold;
@@ -63,15 +74,24 @@ footer{
   padding: 2em 2em;
   position: absolute;
   bottom: 0;
-  
+  width: 100%;
 }
-.Cuvette{
-  font-size: 2em;
-  font-family: Sans-Serif, Helvetia, Arial;
-  margin: 1em 0em;
+.footer_container{
+  display: flex;
+}
+.footer_logo{
+  margin: 1em 1em;
+  padding: 2em 2em;
+}
+.section{
+  margin: 1em 1em;
 }
 .Contact{
   font-size: 1em;
   font-family: Sans-Serif, Helvetia, Arial;
   line-height: 2.0;
+}
+.footer_icons{
+  margin: 1em 1em;
+  padding: 2em 2em;
 }
